# sae.studio

app/: .gitignore  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
app/.github/workflows/: pages.yml  release.yml
app/docs/: DEPLOYMENT_GUIDE.md  EDITOR_COMMANDS.md  SAETICKETS_REF.md
app/docs/templates/: Cierre de Caja.saetickets  Comanda Completa.saetickets  README.md  Ticket Cocina.saetickets
app/landing/: astro.config.mjs  package-lock.json
app/openapi/: saelabel.openapi.json
app/scripts/: build_full_package.ps1  build_server.ps1  gen-api.mjs
app/scripts/inno/: installer.iss
app/src-tauri/: 2  Cargo.toml  tauri.conf.json  updater.key  updater.key.pub
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: main.rs
app/src-tauri/windows/: hooks.nsh
app/src/app/: App.tsx  AppShell.tsx  NotificationContext.tsx  index.ts
app/src/application/: useLocalStorageSync.ts  useMenuManager.ts
app/src/components/: LabelWorkbench.css  LabelWorkbench.tsx  LogicalPrintersManagerModal.tsx  Portal.tsx  TicketDesigner.tsx  VisualCanvasEditor.tsx  index.ts
app/src/infrastructure/: index.ts
app/src/layouts/: Layout.astro
app/src/pages/: index.astro
app/src/shared/: index.ts
app/tests/shared/: event-bus.test.ts  history-store.test.ts
server/: .gitignore  README.md  SAE.STUDIO.slnx
server/src/SAE.Contracts.Runtime/: SAE.Contracts.Runtime.csproj
server/src/SAE.STUDIO.Api/: Program.cs  SAE.STUDIO.Api.csproj  SAELABEL.Api.http  appsettings.Development.json  appsettings.json
(+284 files in other folders)
